@@ -5,8 +5,9 @@ jalv (1.4.5) unstable;
   * Update for latest LV2 Atom Object simplifications
   * Set port pretty names via new Jack metadata API
   * Add support for data-access extension (based on patch by Filipe Coelho)
+  * Support new UI show/hide interface in console version
 
- -- David Robillard <d@drobilla.net>  Sat, 26 Apr 2014 13:50:14 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 26 Apr 2014 20:33:45 -0400
 
 jalv (1.4.4) stable;
 
